# anchor-os

./: .gitignore  .prettierignore  Cargo.toml  FEATURES.md  LICENSE  Makefile  README.md  docker-compose.sites.yml  docker-compose.yml  package-lock.json  package.json
.cargo/: config.toml
.cursor/rules/: anchor-docs-sync.mdc  (+3 more)
admin/backup/backend/: Cargo.toml  Dockerfile
admin/backup/backend/src/: main.rs  scheduler.rs
admin/backup/backend/src/backup/: database.rs
admin/backup/backend/src/storage/: smb.rs
anchor/dashboard/backend/: Cargo.toml  Dockerfile
anchor/dashboard/backend/migrations/: 001_system_settings.sql  003_electrum_setting.sql  004_installation_config.sql  005_user_profile.sql
anchor/dashboard/backend/src/: config.rs  main.rs  monitors.rs
anchor/dashboard/backend/src/handlers/: auth.rs  bitcoin.rs  cloudflare.rs  docker.rs  indexer.rs  installation.rs  mod.rs  node.rs  notifications.rs  settings.rs  tailscale.rs  tor.rs  wallet.rs
apps/anchor-canvas/backend/: Cargo.toml  Dockerfile
apps/anchor-canvas/backend/migrations/: 0003_add_creator_address.sql
apps/anchor-canvas/backend/src/: canvas.rs  config.rs  db.rs  error.rs  indexer.rs  main.rs  models.rs
apps/anchor-canvas/backend/src/db/: indexer.rs  mod.rs  pixels.rs
apps/anchor-canvas/backend/src/handlers/: canvas.rs  mod.rs  pixels.rs  system.rs
apps/anchor-canvas/backend/src/models/: api.rs  mod.rs  pixel.rs
apps/anchor-canvas/backend/src/services/: mod.rs  wallet.rs
apps/anchor-domains/backend/: Cargo.toml  Dockerfile
apps/anchor-domains/backend/migrations/: 0004_domains_schema.sql  0005_pending_transactions.sql  0006_domain_identities.sql  0007_dns_record_names.sql
apps/anchor-domains/backend/src/: config.rs  db.rs  error.rs  handlers.rs  indexer.rs  main.rs  models.rs
apps/anchor-domains/backend/src/db/: domains.rs  identities.rs  indexer.rs  mod.rs  pending.rs  records.rs
apps/anchor-domains/backend/src/handlers/: domains.rs  identity.rs  mod.rs  pending.rs  registration.rs  resolution.rs  system.rs
apps/anchor-domains/backend/src/models/: api.rs  domain.rs  mod.rs
apps/anchor-domains/backend/src/services/: mod.rs  validation.rs  wallet.rs
apps/anchor-lottery/backend/: Cargo.toml  Dockerfile
apps/anchor-lottery/backend/src/: config.rs  db.rs  dlc.rs  handlers.rs  indexer.rs  main.rs  models.rs
apps/anchor-places/backend/: Cargo.toml  Dockerfile
apps/anchor-places/backend/src/: config.rs  db.rs  error.rs  handlers.rs  indexer.rs  main.rs  models.rs
apps/anchor-places/backend/src/db/: categories.rs  indexer_state.rs  markers.rs  mod.rs  replies.rs
apps/anchor-places/backend/src/handlers/: categories.rs  markers.rs  mod.rs  system.rs
apps/anchor-places/backend/src/models/: api.rs  db.rs  mod.rs
apps/anchor-places/backend/src/services/: mod.rs  wallet.rs
apps/anchor-proofs/backend/: Cargo.toml  Dockerfile
apps/anchor-proofs/backend/migrations/: 0006_add_creator_address.sql
apps/anchor-proofs/backend/src/: config.rs  db.rs  error.rs  handlers.rs  indexer.rs  main.rs  models.rs
apps/anchor-proofs/backend/src/db/: indexer_state.rs  mod.rs  proofs.rs
apps/anchor-proofs/backend/src/handlers/: mod.rs  proofs.rs  stamp.rs  system.rs
apps/anchor-proofs/backend/src/models/: api.rs  db.rs  mod.rs
apps/anchor-proofs/backend/src/services/: mod.rs  wallet.rs
crates/anchor-core/: Cargo.toml
crates/anchor-core/src/: encoder.rs  lib.rs  parser.rs  types.rs
crates/anchor-core/src/carrier/: annex.rs  error.rs  inscription.rs  mod.rs  op_return.rs  stamps.rs  witness.rs
crates/anchor-core/src/types/: anchor.rs  message.rs  mod.rs
crates/anchor-indexer/: Cargo.toml  Dockerfile
crates/anchor-indexer/src/: db.rs  indexer.rs  main.rs
crates/anchor-specs/: Cargo.toml
crates/anchor-specs/src/: error.rs  lib.rs
crates/anchor-specs/src/kinds/: dns.rs  geomarker.rs  mod.rs  proof.rs  state.rs  token.rs
crates/anchor-testnet/: Cargo.toml  Dockerfile
crates/anchor-testnet/src/: config.rs  generator.rs  main.rs
crates/anchor-testnet/src/generator/: types.rs  wallet_client.rs
crates/anchor-testnet/src/handlers/: api.rs
crates/anchor-wallet/: Cargo.toml  Dockerfile
crates/anchor-wallet-lib/: Cargo.toml  README.md
crates/anchor-wallet-lib/src/: config.rs  error.rs  lib.rs  transaction.rs  types.rs  wallet.rs
crates/anchor-wallet-lib/src/transaction/: anchor_tx.rs  builder.rs  mod.rs
crates/anchor-wallet-lib/src/wallet/: mod.rs  rpc.rs
crates/anchor-wallet/src/: config.rs  handlers.rs  locked.rs  main.rs  wallet.rs
crates/anchor-wallet/src/handlers/: message.rs  wallet.rs
crates/anchor-wallet/src/wallet/: advanced.rs  mod.rs  service.rs  specs.rs  types.rs
crates/anchor-wallet/src/wallet/carriers/: annex.rs  inscription.rs  mod.rs  op_return.rs  witness.rs
docker/: compose.apps.yml  compose.core.yml  compose.dashboard.yml  compose.electrum.yml  compose.explorers.yml  compose.monitoring.yml  compose.networking.yml  compose.sites.yml
docs/: protocol-benchmark.md
e2e/: .gitignore  README.md  cypress.config.ts  package-lock.json  package.json  tsconfig.json
explorer/backend/: Cargo.toml  Dockerfile
explorer/backend/src/: config.rs  db.rs  models.rs
internal/anchor-testnet/: Cargo.toml  Dockerfile
internal/anchor-testnet/src/: config.rs  main.rs  websocket.rs
internal/anchor-testnet/src/generator/: messages.rs  mod.rs  sample_data.rs  types.rs  wallet_client.rs
internal/anchor-testnet/src/handlers/: api.rs  mod.rs
internal/anchor-wallet/: Cargo.toml  Dockerfile
internal/anchor-wallet/src/: config.rs  identity.rs  locked.rs  main.rs  migration.rs
internal/anchor-wallet/src/handlers/: assets.rs  backup.rs  health.rs  identity.rs  locks.rs  message.rs  mod.rs  transaction.rs  wallet.rs
internal/anchor-wallet/src/wallet/: advanced.rs  anchor.rs  bdk_service.rs  mod.rs  service.rs  specs.rs  types.rs  utils.rs
internal/anchor-wallet/src/wallet/carriers/: annex.rs  inscription.rs  mod.rs  op_return.rs  stamps.rs  witness.rs
libs/: README.md
scripts/: clean.sh  db-migrate.sh  db-reset.sh  dev-setup.sh  docker-logs.sh
(+999 files in other folders)
