[workspace]
resolver = "2"
members = [
    "crates/anchor-core",
    "crates/anchor-specs",
    "crates/anchor-indexer",
    "crates/anchor-wallet",
    "crates/anchor-testnet",
    "crates/anchor-wallet-lib",
    "apps/anchor-threads/backend",
    "anchor/dashboard/backend",
    "anchor/backup/backend",
    "apps/anchor-canvas/backend",
    "apps/anchor-places/backend",
    "apps/anchor-domains/backend",
    "apps/anchor-proofs/backend",
    "apps/anchor-tokens/backend",
    "apps/anchor-oracles/backend",
    "apps/anchor-predictions/backend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ANCHOR Protocol Contributors"]
repository = "https://github.com/anchor-protocol/anchor"

# Workspace-wide lint configuration
[workspace.lints.rust]
# Unused code detection
unused_variables = "warn"
unused_imports = "warn"
dead_code = "warn"
unused_mut = "warn"
unreachable_code = "warn"

# Code quality
unsafe_code = "warn"
missing_docs = "allow"  # Can be "warn" for stricter doc requirements

[workspace.lints.clippy]
# Clippy lints
all = { level = "warn", priority = -1 }
pedantic = "allow"  # Can be "warn" for stricter style
nursery = "allow"
unwrap_used = "allow"  # Can be "warn" to enforce Result handling
expect_used = "allow"
# Database functions often have many parameters - allow up to 15
too_many_arguments = "allow"
# SQLx query results use complex tuple types - this is expected
type_complexity = "allow"

[workspace.dependencies]
# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }
bitcoincore-rpc = "0.19"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Internal crates
anchor-core = { path = "crates/anchor-core" }
anchor-specs = { path = "crates/anchor-specs" }







