[package]
name = "anchor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types and parsing for the ANCHOR protocol"

[dependencies]
bitcoin.workspace = true
serde.workspace = true
thiserror.workspace = true
hex.workspace = true
chrono.workspace = true

