[package]
name = "anchor-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Blockchain indexer for the ANCHOR protocol"

[[bin]]
name = "anchor-indexer"
path = "src/main.rs"

[dependencies]
anchor-core.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dotenvy.workspace = true
hex.workspace = true

