[package]
name = "explorer-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "REST API backend for the ANCHOR explorer"

[[bin]]
name = "explorer-backend"
path = "src/main.rs"

[dependencies]
anchor-core.workspace = true
bitcoin.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
hex.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

