[package]
name = "anchor-testnet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Test service that generates random ANCHOR transactions on regtest"

[[bin]]
name = "anchor-testnet"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
axum = { workspace = true, features = ["ws"] }
tower-http.workspace = true
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
hex.workspace = true

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
