[package]
name = "anchor-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Wallet service for creating ANCHOR transactions"

[[bin]]
name = "anchor-wallet"
path = "src/main.rs"

[dependencies]
anchor-core.workspace = true
anchor-specs.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
chrono.workspace = true
dirs.workspace = true
reqwest.workspace = true

# BDK (Bitcoin Dev Kit) for key management
bdk_wallet.workspace = true
bdk_electrum.workspace = true
bdk_file_store.workspace = true
bip39.workspace = true

# Cryptography for encrypted backups
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
