[package]
name = "dashboard-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dashboard backend for managing the Anchor stack"

[[bin]]
name = "dashboard-backend"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
chrono.workspace = true

# HTTP client for proxying requests
reqwest = { version = "0.12", features = ["json"] }

# Docker client
bollard = "0.18"

# Futures for async streams
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }

# Password hashing
argon2 = "0.5"

# For SSE streaming logs
async-stream = "0.3"
regex = "1"

# JWT
jsonwebtoken = "9"

