[package]
name = "anchor-canvas-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Backend API and indexer for the AnchorCanvas collaborative canvas on Bitcoin"

[[bin]]
name = "anchor-canvas-backend"
path = "src/main.rs"

[dependencies]
anchor-core.workspace = true
anchor-specs.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
hex.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Image generation for canvas tiles
image = "0.25"

# HTTP client for wallet service
reqwest.workspace = true


