[package]
name = "anchor-lottery-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Backend API and indexer for Anchor Lottery - Trustless lottery with DLC payouts"

[[bin]]
name = "anchor-lottery-backend"
path = "src/main.rs"

[dependencies]
anchor-core.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
hex.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# HTTP client for wallet/oracle service
reqwest = { version = "0.12", features = ["json"] }

# Cryptography for DLC
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
rand = "0.8"
sha2 = "0.10"

